--- a/src/components/Login/login.css
+++ b/src/components/Login/login.css
@@ -3,13 +3,13 @@
 }
 
 .login-card {
-  width: 25%;
+  background-color: #58b09c;
+  width: 30%;
   height: 10%;
   text-align: center;
-  border: 2px solid black;
   position: fixed;
   top: calc(50% - 5%);
-  left: calc(50% - 12.5%);
+  left: calc(50% - 15%);
 }
 
 .login-button {
